@@ -1,3 +1,9 @@
+2006-12-07  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/ReflectionWriter.cs:
+		Allow an AssemblyDefinition to be written
+		more than once.
+
 2006-12-05  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs:
